--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "graphql": "^15.5.1",
     "nodemon": "^2.0.10",
     "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
