--- a/backend/package.json
+++ b/backend/package.json
@@ -1,35 +1,45 @@
 {
-   "name": "backend",
-   "version": "1.0.0",
-   "description": "",
-   "main": "index.js",
-   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node src/index.ts"
-   },
-   "keywords": [],
-   "author": "3mi <emilianodelvalle@icloud.com> (https://www.npmjs.com/~3mi)",
-   "license": "ISC",
-   "dependencies": {
-      "@mikro-orm/core": "^4.5.7",
-      "@mikro-orm/postgresql": "^4.5.7",
-      "argon2": "^0.28.2",
-      "cors": "^2.8.5",
-      "express": "^4.15.4",
-      "helmet": "^4.6.0",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^5.13.3",
-      "typeorm": "0.2.34",
-      "reflect-metadata": "^0.1.10",
-      "body-parser": "^1.18.1"
-   },
-   "devDependencies": {
-      "@types/argon2": "^0.15.0",
-      "@types/cors": "^2.8.12",
-      "@types/express": "^4.17.13",
-      "@types/jsonwebtoken": "^8.5.4",
-      "typescript": "3.3.3333",
-      "ts-node": "3.3.0",
-      "@types/node": "^8.0.29"
-   }
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "watch": "tsc -w",
+    "dev": "nodemon dist/app.js",
+    "start": "node dist/app.js"
+  },
+  "keywords": [],
+  "author": "3mi <emilianodelvalle@icloud.com> (https://www.npmjs.com/~3mi)",
+  "license": "ISC",
+  "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "@types/dotenv": "^8.2.0",
+    "@types/gravatar": "^1.8.3",
+    "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
+    "argon2": "^0.28.2",
+    "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "gravatar": "^1.8.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "typescript": "^4.3.5",
+    "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "@types/argon2": "^0.15.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/hapi__joi": "^17.1.7",
+    "@types/jsonwebtoken": "^8.5.4",
+    "@types/mongoose": "^5.11.97",
+    "@types/validator": "^13.6.3",
+    "nodemon": "^2.0.12",
+    "ts-node": "^10.1.0"
+  }
 }
