--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,38 @@
 {
-   "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
+    "compilerOptions": {
+        "target": "es6",
+        "module": "commonjs",
+        "lib": [
+          "dom",
+          "es6",
+          "es2017",
+          "esnext.asynciterable"
+        ],
+        "skipLibCheck": true,
+        "sourceMap": true,
+        "outDir": "./dist",
+        "moduleResolution": "node",
+        "removeComments": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "noImplicitThis": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": false,
+        "noFallthroughCasesInSwitch": true,
+        "allowSyntheticDefaultImports": true,
+        "emitDecoratorMetadata": true,
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "baseUrl": "."
+      },
+      "exclude": [
+        "node_modules"
       ],
-      "target": "es5",
-      "module": "commonjs",
-      "moduleResolution": "node",
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true
-   }
-}
+      "include": [
+        "./src/**/*.tsx",
+        "./src/**/*.ts"
+      ]
+    }
