--- a/backend/package.json
+++ b/backend/package.json
@@ -13,15 +13,23 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "@types/connect-mongo": "^3.1.3",
+    "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^8.2.0",
+    "@types/express-jwt": "^6.0.2",
+    "@types/express-session": "^1.17.4",
     "@types/gravatar": "^1.8.3",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "argon2": "^0.28.2",
     "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.4.1",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-session": "^1.17.2",
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
