--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "@types/express-jwt": "^6.0.2",
     "@types/express-session": "^1.17.4",
     "@types/gravatar": "^1.8.3",
+    "@types/multer": "^1.4.7",
     "@types/passport": "^1.0.7",
     "@types/passport-jwt": "^3.0.6",
     "argon2": "^0.28.2",
@@ -33,6 +34,7 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "typescript": "^4.3.5",
