--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "4.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
