--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "slugify": "^1.6.0",
     "typescript": "^4.3.5",
     "validator": "^13.6.0"
   },
