--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^6.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-spring": "^9.2.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
