--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.12",
     "jwt-decode": "^3.1.2",
     "node-sass": "4.14.0",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-spring": "^9.2.4",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
