--- a/backend/package.json
+++ b/backend/package.json
@@ -39,7 +39,9 @@
     "passport-jwt": "^4.0.0",
     "slugify": "^1.6.0",
     "typescript": "^4.3.5",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "ts-node": "^10.1.0",
+    "nodemon": "^2.0.12"
   },
   "devDependencies": {
     "@types/argon2": "^0.15.0",
@@ -49,8 +51,6 @@
     "@types/hapi__joi": "^17.1.7",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
-    "@types/validator": "^13.6.3",
-    "nodemon": "^2.0.12",
-    "ts-node": "^10.1.0"
+    "@types/validator": "^13.6.3"
   }
 }
